# signal_box

./: .gitignore  Cargo.toml  GDD.md  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: ci.yml
_template_unused/prototype_v0/: dev_tools.rs  interaction.rs  ui.rs
_template_unused/prototype_v0/sim/: graph.rs  mod.rs  train.rs
assets/audio/: README.md
assets/config/: game.tunables.ron
assets/i18n/: de.ron  en.ron
assets/levels/: README.md  k1_01_erste_fahrt.ron  k1_01_erste_gleise.ron  k1_02_blocktakt.ron  k1_02_kurvige_strecke.ron  k1_02_um_das_hindernis.ron  k1_03_bloeke_und_signale.ron  k1_03_dreier_takt.ron  k1_03_mehere_wege.ron  k1_04_langzug.ron  k1_04_signale_nutzen.ron  k1_04_verwindende_strecke.ron  k1_05_schnellzuege.ron  k1_05_weichen.ron  k1_06_test.ron  k1_06_weichen_und_signale.ron  k1_07_ausweichgleis.ron  k1_08_mehr_signale.ron  k1_09_blockchaos.ron  k1_10_durch_das_tal.ron  k2_01_ausweiche.ron  k2_01_neue_herrausforderungen.ron  k2_02_gegenverkehr.ron  k2_02_zielregeln.ron  k2_03_doppelter_gegenzug.ron  k2_04_ueberholung.ron  k3_01_kreuzung.ron  k3_02_doppelkreuzung.ron  k3_03_kreuzungstakt.ron  k4_01_erste_fracht.ron  k4_01_sortierwerk.ron  k4_02_drei_ziele.ron  k4_03_mischverkehr.ron
assets/levels/solutions/: k1_01_erste_fahrt.ron  k1_01_erste_gleise.ron  k1_02_blocktakt.ron  k1_02_kurvige_strecke.ron  k1_02_um_das_hindernis.ron  k1_03_bloeke_und_signale.ron  k1_03_dreier_takt.ron  k1_03_mehere_wege.ron  k1_03_mehere_wege__material.ron  k1_04_langzug.ron  k1_04_signale_nutzen.ron  k1_04_verwindende_strecke.ron  k1_04_verwindende_strecke__material.ron  k1_05_schnellzuege.ron  k1_05_weichen.ron  k1_06_test.ron  k1_06_weichen_und_signale.ron  k1_06_weichen_und_signale__durchsatz.ron  k1_07_ausweichgleis.ron  k1_08_mehr_signale.ron  k1_09_blockchaos.ron  k1_09_blockchaos__material.ron  k1_10_durch_das_tal__durchsatz.ron  k1_10_durch_das_tal__material.ron  k2_01_neue_herrausforderungen.ron  k2_01_neue_herrausforderungen__material.ron  k2_02_gegenverkehr.ron  k2_02_gegenverkehr__material.ron  k2_02_zielregeln.ron  k2_03_doppelter_gegenzug.ron  k2_04_ueberholung.ron  k3_02_doppelkreuzung.ron  k3_03_kreuzungstakt.ron  k4_01_erste_fracht.ron  k4_01_sortierwerk.ron  k4_02_drei_ziele.ron
crates/stellwerk_codes/: Cargo.toml
crates/stellwerk_codes/src/: lib.rs
crates/stellwerk_sim/: Cargo.toml
crates/stellwerk_sim/src/: blocks.rs  failure.rs  graph.rs  grid.rs  hash.rs  layout.rs  level.rs  lib.rs  routing.rs  score.rs  sim.rs  train.rs  units.rs
crates/stellwerk_sim/src/level/: core.rs  meta.rs  mod.rs
crates/stellwerk_sim/tests/: scenarios.rs
crates/stellwerk_sim/tests/common/: mod.rs
crates/stellwerk_sim/tests/scenarios/: s01_single_train_straight.ron  s02_curves_and_diagonals.ron  s03_two_trains_block_signal.ron  s04_rear_end_no_signal.ron  s05_head_on_single_track.ron  s06_passing_loop.ron  s07_switch_default.ron  s08_switch_dest_rule.ron  s09_switch_rule_order.ron  s10_misrouting_wrong_sink.ron  s11_misrouting_dead_end.ron  s12_reachability_check.ron  s13_block_only_crossing.ron  s14_chain_signal_crossing.ron  s15_chain_reservation_timing.ron  s16_source_fifo.ron  s17_long_train_two_blocks.ron  s18_ring_self_jam.ron  s19_full_scoring.ron  s21_unsignalled_crossing_collision.ron  s22_signalled_crossing_collides.ron  s22_signalled_crossing_takes_turns.ron
docs/: alternative-loesungen.md  autoren-tools.md  itch-release.md  level-authoring.md  level-bauen.md
docs/plans/M0/: M0-sim-kern.md
docs/plans/M1/: M1-vertical-slice.md
docs/plans/M2/: M2-content-maschine.md
docs/plans/M2/restfeatures/: 01-sharing-zwischenablage.md  02-sandbox-undo.md  03-fahrplan-eingabefelder.md  04-din-schrift.md
docs/plans/M3/: M3-demo.md
docs/plans/M4/: M4-launch.md
docs/plans/freight/: freight-trains.md
docs/plans/k2/: kapitel-2-level.md
docs/plans/zug-optik/: klassen-und-waggons.md
plans/: M0-angabe.md  M0-sim-kern.md
plans/M0/: M0-angabe.md  M0-sim-kern.md  M0_Woche_02_Tick_Loop_und_Bewegung.md  M0_Woche_03_Routing_und_Kettensignale.md  M0_Woche_04_Deadlocks_Score_Determinismus.md
plans/M1/: M1-vertical-slice.md
plans/M2/: M2-content-maschine.md  content-log.md
plans/M2/restfeatures/: 01-sharing-zwischenablage.md  02-sandbox-undo.md  03-fahrplan-eingabefelder.md  04-din-schrift.md
plans/M3/: M3-demo.md
plans/M4/: M4-launch.md
plans/optimierung/: 01-asset-loading-states.md  02-fps-killer.md
plans/wasm/: wasm-port.md
screenshots/: desktop.ini
src/: authoring.rs  board.rs  camera.rs  clipboard.rs  console.rs  dev_tools.rs  editor.rs  font.rs  i18n.rs  levels.rs  loading.rs  main.rs  render.rs  run.rs  state.rs  ui.rs
src/audio/: assets.rs  mod.rs  music.rs  sfx.rs
src/board/: draw.rs  edit_board.rs  geometry.rs  mod.rs  palette.rs  run_board.rs
src/core/: mod.rs  states.rs  tunables.rs
src/editor/: mod.rs  ops.rs  overlays.rs  placement.rs  radial.rs  tools.rs  validation.rs
src/editor/tools/: commit.rs  keys.rs  mod.rs  pointer.rs  strokes.rs  track.rs  wheel.rs
src/graphics/: animation.rs  camera.rs  mod.rs  y_sort.rs
src/level/: collision.rs  mod.rs
src/level/collision/: map.rs
src/player/: input.rs  mod.rs  movement.rs  spawn.rs
src/sim/: signal.rs
src/ui/: campaign_save.rs  console.rs  edit_hud.rs  encyclopedia.rs  hints.rs  juice.rs  main_menu.rs  mod.rs  numeric_field.rs  options.rs  pause.rs  result.rs  run_hud.rs  sandbox_setup.rs  schedule_panel.rs  select.rs  station_panel.rs  switch_panel.rs  toolbar.rs  valerr.rs  widgets.rs
src/ui/console/: interact.rs  mod.rs  render.rs  scroll.rs  spawn.rs
src/ui/edit_hud/: actions.rs  diag.rs  mod.rs  start.rs
src/ui/select/: actions.rs  dev.rs  mod.rs  views.rs
tests/: i18n.rs  levels.rs  par_proof.rs
tools/: due_suggest.rs  i18n_fill.rs  par_suggest.rs
