[package]
name = "signal_box"
version = "0.1.0"
edition = "2024"
description = "Stellwerk — a Zachlike about routing trains with switches and signals."
license = "MIT OR Apache-2.0"
# `cargo run` launches the game; the authoring CLIs need an explicit --bin.
default-run = "signal_box"

[workspace]
members = ["crates/*"]

[features]
default = ["dev"]
# Development tools: egui world inspector + FPS overlay. Ship a release build
# with `cargo build --release --no-default-features`.
dev = ["bevy/bevy_dev_tools", "dep:bevy-inspector-egui"]

# Authoring CLIs (optimierung/07 #3+#4), dev-only — never in a ship build.
# They use only stellwerk_sim + ron, so they don't link Bevy.
[[bin]]
name = "par_suggest"
path = "tools/par_suggest.rs"
required-features = ["dev"]

[[bin]]
name = "i18n_fill"
path = "tools/i18n_fill.rs"
required-features = ["dev"]

[dependencies]
bevy = "0.18.1"
stellwerk_sim = { path = "crates/stellwerk_sim" }
stellwerk_codes = { path = "crates/stellwerk_codes" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
directories = "6"
# Systemzwischenablage für Sharing-Codes (M2-Restfeature 01, GDD §12.2).
# Default-Features genügen (Wayland-Support, KEIN image-data) → text-only,
# keine Bildcodec-Kette.
arboard = "3"
bevy-inspector-egui = { version = "0.36", optional = true }
# ogg (default) für Musik-Loops; wav für kurze SFX; mp3 optional dazu.
bevy_kira_audio = { version = "0.25.0", features = ["wav"] }
# Zufall für die Level-Musik-Playlist. Bewusst NUR in der Bevy-Schicht — der
# stellwerk_sim-Kern bleibt deterministisch und randomness-frei.
fastrand = "2"

# Vendored bevy_text 0.18.1 with ONE patched constant (font atlas page size
# 512 → 2048, see vendor/bevy_text/src/font_atlas.rs): texts whose glyphs
# overflow onto a second atlas page render corrupted glyphs in bevy 0.18.
# Remove the patch when upgrading to a bevy version that fixes multi-page
# font atlas rendering.
[patch.crates-io]
bevy_text = { path = "vendor/bevy_text" }

# Fast iteration: light optimization for our code, full optimization for
# dependencies (Bevy is unusably slow at opt-level 0).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# Determinism guard for stellwerk_sim: arithmetic overflow must panic
# loudly and identically on every platform, never wrap silently.
overflow-checks = true
