[package]
name = "signal_box"
version = "0.9.0"
edition = "2024"
description = "Stellwerk — a Zachlike about routing trains with switches and signals."
license = "MIT OR Apache-2.0"
# `cargo run` launches the game; the authoring CLIs need an explicit --bin.
default-run = "signal_box"

[workspace]
members = ["crates/*"]

[features]
default = ["dev"]
# Development tools: egui world inspector + FPS overlay. Ship a release build
# with `cargo build --release --no-default-features`.
dev = ["bevy/bevy_dev_tools", "dep:bevy-inspector-egui"]

# Authoring CLIs (optimierung/07 #3+#4), dev-only — never in a ship build.
# They use only stellwerk_sim + ron, so they don't link Bevy.
[[bin]]
name = "par_suggest"
path = "tools/par_suggest.rs"
required-features = ["dev"]

[[bin]]
name = "due_suggest"
path = "tools/due_suggest.rs"
required-features = ["dev"]

[[bin]]
name = "i18n_fill"
path = "tools/i18n_fill.rs"
required-features = ["dev"]

[dependencies]
bevy = "0.18.1"
stellwerk_sim = { path = "crates/stellwerk_sim" }
stellwerk_codes = { path = "crates/stellwerk_codes" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"
bevy-inspector-egui = { version = "0.36", optional = true }
# ogg (default) für Musik-Loops; wav für kurze SFX; mp3 optional dazu.
bevy_kira_audio = { version = "0.25.0", features = ["wav"] }
# Zufall für die Level-Musik-Playlist. Bewusst NUR in der Bevy-Schicht — der
# stellwerk_sim-Kern bleibt deterministisch und randomness-frei.
fastrand = "2"

# --- Desktop only (Windows/Linux/macOS) -------------------------------------
# Native-only Crates: sie landen NIE im wasm-Baum (arboard hat kein
# Browser-Backend, directories kein Config-Verzeichnis). Der Desktop-Build ist
# damit unverändert; der Browser-Build (plans/wasm/wasm-port.md) nutzt web-sys.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6"
# Systemzwischenablage für Sharing-Codes (M2-Restfeature 01, GDD §12.2).
# Default-Features genügen (Wayland-Support, KEIN image-data) → text-only.
arboard = "3"

# --- Browser only (wasm32) --------------------------------------------------
# localStorage (Persistenz), Clipboard + window.prompt (Sharing-Codes). web-sys
# ist transitiv (über bevy/wasm-bindgen) schon im Baum — kein Versionssprung.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# localStorage (Persistenz), window.prompt (Import) und ein Textarea+execCommand
# fürs zuverlässige Kopieren im itch-iframe. web-sys ist transitiv schon da.
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Document",
    "HtmlDocument",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "Node",
] }
wasm-bindgen = "0.2"
# Level-Katalog ohne Dateisystem: das assets/levels-Verzeichnis wird zur
# Compile-Zeit eingebettet (Desktop liest weiter via read_dir).
include_dir = "0.7"

[dev-dependencies]
# Schriftprüfung (M2-Restfeature 04): Glyph-Abdeckung der ausgelieferten Font
# gegen alle UI-Zeichen prüfen. Test-only, schon transitiv im Baum (cosmic-text)
# → kein Laufzeit-§12.4-Vorgang.
ttf-parser = "0.25"

# Vendored bevy_text 0.18.1 with ONE patched constant (font atlas page size
# 512 → 2048, see vendor/bevy_text/src/font_atlas.rs): texts whose glyphs
# overflow onto a second atlas page render corrupted glyphs in bevy 0.18.
# Remove the patch when upgrading to a bevy version that fixes multi-page
# font atlas rendering.
[patch.crates-io]
bevy_text = { path = "vendor/bevy_text" }

# Fast iteration: light optimization for our code, full optimization for
# dependencies (Bevy is unusably slow at opt-level 0).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# Determinism guard for stellwerk_sim: arithmetic overflow must panic
# loudly and identically on every platform, never wrap silently.
overflow-checks = true
