[package]
name = "stellwerk_sim"
version = "0.1.0"
edition = "2024"
description = "Deterministic simulation core for Stellwerk — no engine, no floats, no randomness."
license = "MIT OR Apache-2.0"

# Profiles live in the workspace root Cargo.toml — cargo ignores profile
# sections in workspace members.

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ron = "0.12"
